--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "json",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "run": "node index.js"
   },
   "keywords": [
     "json"
@@ -13,7 +13,6 @@
   "license": "ISC",
   "dependencies": {
     "fs": "^0.0.1-security",
-    "https": "^1.0.0",
-    "typescript": "^5.4.3"
+    "https": "^1.0.0"
   }
 }
